--- a/praktika.vcxproj
+++ b/praktika.vcxproj
@@ -143,11 +143,13 @@
     <ResourceCompile Include="app.rc" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Cells.h" />
     <ClInclude Include="Cell_Green.h" />
     <ClInclude Include="Cell_Purple.h" />
     <ClInclude Include="Cell_Red.h" />
+    <ClInclude Include="Food.h" />
     <ClInclude Include="Movement.h" />
-    <ClInclude Include="Form1.h">
+    <ClInclude Include="Main.h">
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="Gamelogic.h" />
@@ -157,12 +159,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp" />
+    <ClCompile Include="Cells.cpp" />
     <ClCompile Include="Cell_Green.cpp" />
     <ClCompile Include="Cell_Purple.cpp" />
     <ClCompile Include="Cell_Red.cpp" />
     <ClCompile Include="CppCLR_WinformsProjekt.cpp" />
+    <ClCompile Include="Food.cpp" />
     <ClCompile Include="Movement.cpp" />
-    <ClCompile Include="Form1.cpp" />
+    <ClCompile Include="Main.cpp" />
     <ClCompile Include="Gamelogic.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -183,8 +187,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.h</DependentUpon>
+    <EmbeddedResource Include="Main.resx">
+      <DependentUpon>Main.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
