--- a/praktika.vcxproj.filters
+++ b/praktika.vcxproj.filters
@@ -26,7 +26,7 @@
     <ClInclude Include="pch.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="Form1.h">
+    <ClInclude Include="Main.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
     <ClInclude Include="Cell%28Blue%29.h">
@@ -47,6 +47,12 @@
     <ClInclude Include="Cell_Purple.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="Cells.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="Food.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CppCLR_WinformsProjekt.cpp">
@@ -58,7 +64,7 @@
     <ClCompile Include="pch.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="Form1.cpp">
+    <ClCompile Include="Main.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="Cell%28Blue%29.cpp">
@@ -77,6 +83,12 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="Cell_Purple.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="Cells.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="Food.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
